many erros auuuuhh haha

--- a/output.ipynb
+++ b/output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "max      -37.408530    145.526350   21650.000000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,30 +224,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name '____' is not defined",
+     "data": {
+      "text/plain": [
+       "Index(['Suburb', 'Address', 'Rooms', 'Type', 'Price', 'Method', 'SellerG',\n",
+       "       'Date', 'Distance', 'Postcode', 'Bedroom2', 'Bathroom', 'Car',\n",
+       "       'Landsize', 'BuildingArea', 'YearBuilt', 'CouncilArea', 'Lattitude',\n",
+       "       'Longtitude', 'Regionname', 'Propertycount'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# save filepath to variable for easier access\n",
+    "melbourne_file_path = './melb_data.csv'\n",
+    "# read the data and store data in DataFrame titled melbourne_data\n",
+    "melbourne_data = pd.read_csv(melbourne_file_path) \n",
+    "# print a summary of the data in Melbourne data\n",
+    "melbourne_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m iowa_file_path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m../input/home-data-for-ml-course/train.csv\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[39m# Fill in the line below to read the file into a variable home_data\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m home_data \u001b[39m=\u001b[39m ____\n\u001b[1;32m      7\u001b[0m \u001b[39m# Call line below with no argument to check that you've loaded the data correctly\u001b[39;00m\n\u001b[1;32m      8\u001b[0m step_1\u001b[39m.\u001b[39mcheck()\n",
-      "\u001b[0;31mNameError\u001b[0m: name '____' is not defined"
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m melbourne_features \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mRooms\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mBathroom\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mLandsize\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mLattitude\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mLongtitude\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      3\u001b[0m X \u001b[39m=\u001b[39m melbourne_data[melbourne_features]\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtree\u001b[39;00m \u001b[39mimport\u001b[39;00m DecisionTreeRegressor\n\u001b[1;32m      7\u001b[0m \u001b[39m# Define model. Specify a number for random_state to ensure same results each run\u001b[39;00m\n\u001b[1;32m      8\u001b[0m melbourne_model \u001b[39m=\u001b[39m DecisionTreeRegressor(random_state\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
      ]
     }
    ],
    "source": [
-    "# Path of the file to read\n",
-    "iowa_file_path = '../input/home-data-for-ml-course/train.csv'\n",
+    "melbourne_features = ['Rooms', 'Bathroom', 'Landsize', 'Lattitude', 'Longtitude']\n",
     "\n",
-    "# Fill in the line below to read the file into a variable home_data\n",
-    "home_data = ____\n",
+    "X = melbourne_data[melbourne_features]\n",
     "\n",
-    "# Call line below with no argument to check that you've loaded the data correctly\n",
-    "step_1.check()"
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "# Define model. Specify a number for random_state to ensure same results each run\n",
+    "melbourne_model = DecisionTreeRegressor(random_state=1)\n",
+    "\n",
+    "# Fit model\n",
+    "melbourne_model.fit(X, y)\n",
+    "\n",
+    "print(\"Making predictions for the following 5 houses:\")\n",
+    "print(X.head())\n",
+    "print(\"The predictions are\")\n",
+    "print(melbourne_model.predict(X.head()))"
    ]
   }
  ],
